@@ -53,10 +53,17 @@
   <tr>
     <td width="55%">
       <dl>
+	<dt>October 5, 2003</dt>
+	<dd>LilyPond 2.0.1 binaries are available for Macos X.
+	  Download <a href="download/macos.html">here</a>.  Thanks to
+	  Matthias Neeracher.
+	</dd>
+	
 	<dt>October 4, 2003</dt>
 	<dd>LilyPond 2.0.1 binaries are available for Windows (Cygwin
-	  version 1.5).  Download <a href="download/">here</a>.  Thanks
-	  to Bertalan Fodor, our new Cygwin maintainer!
+	  version 1.5).  Download
+	  <a href="download/windows.html">here</a>.  Thanks to Bertalan
+	  Fodor, our new Cygwin maintainer!
 	</dd>
 	
 	<dt>September 29, 2003</dt>
